--- a/Ext.Net.Benchmarks.Classic5/Dockerfile
+++ b/Ext.Net.Benchmarks.Classic5/Dockerfile
@@ -3,11 +3,18 @@
 #Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
 #For more information, please see https://aka.ms/containercompat
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+
+WORKDIR /root/.nuget/NugetFeed
+COPY ./Ext.Net.Benchmarks.Classic/NugetFeed ./
+
+WORKDIR /Users/ContainerUser/AppData/Roaming/NuGet
+COPY ./Ext.Net.Benchmarks.Classic/NugetFeed/NuGet.Config ./NuGet.Config
+
 WORKDIR /src
 COPY ["Ext.Net.Benchmarks.Classic5/Ext.Net.Benchmarks.Classic5.csproj", "Ext.Net.Benchmarks.Classic5/"]
 COPY ["Ext.Net.Benchmarks.Common/Ext.Net.Benchmarks.Common.csproj", "Ext.Net.Benchmarks.Common/"]
