--- a/Ext.Net.Benchmarks.Classic5/Dockerfile
+++ b/Ext.Net.Benchmarks.Classic5/Dockerfile
@@ -1,19 +1,14 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
-
-FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
 
 WORKDIR /root/.nuget/NugetFeed
 COPY ./Ext.Net.Benchmarks.Classic/NugetFeed ./
-
-WORKDIR /Users/ContainerUser/AppData/Roaming/NuGet
-COPY ./Ext.Net.Benchmarks.Classic/NugetFeed/NuGet.Config ./NuGet.Config
+COPY ./Ext.Net.Benchmarks.Classic/NugetFeed/NuGet.Config /root/.nuget/NuGet/NuGet.Config
 
 WORKDIR /src
 COPY ["Ext.Net.Benchmarks.Classic5/Ext.Net.Benchmarks.Classic5.csproj", "Ext.Net.Benchmarks.Classic5/"]
