--- a/Ext.Net.Benchmarks.Classic5/NugetFeed/NuGet.Config
+++ b/Ext.Net.Benchmarks.Classic5/NugetFeed/NuGet.Config
@@ -2,7 +2,7 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="Custom NuGet Feed" value="c:\root\.nuget\NugetFeed" />
+    <add key="Custom NuGet Feed" value="/root/.nuget/NugetFeed" />
   </packageSources>
   <packageRestore>
     <add key="enabled" value="True" />
